--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,11 +8,11 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
         <item name="android:gravity">center</item>
-        <item name="android:textSize">12sp</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textColor">#1B1B1B</item>
-        <item name="android:alpha">0.9</item>
+        <item name="android:textSize">10sp</item>
+        <item name="android:textColor">#6A6A6A</item>
+        <item name="android:fontFamily">serif</item>
     </style>
+
 
     <!-- Purple panel label row (M T W T F S S) -->
     <style name="DotLabel">
